tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions06(target=es5).errors.txt
unicodeExtendedEscapesInRegularExpressions06.ts(3,22): error TS1501: This regular expression flag is only available when targeting 'es6' or later.


==== unicodeExtendedEscapesInRegularExpressions06.ts (1 errors) ====
    // ES6 Spec - 10.1.1 Static Semantics: UTF16Encoding (cp)
    //  1. Assert: 0 ≤ cp ≤ 0x10FFFF.
    var x = /\u{10FFFF}/gu;
                         ~
!!! error TS1501: This regular expression flag is only available when targeting 'es6' or later.
    